# onprem-rag-chatbot

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/web/: .env.example  README.md  next.config.mjs  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx  sources.tsx  types.ts
apps/web/app/api/chat/: route.ts
data/: README.md
docs/: architecture.md  decisions.md  on-prem-switch.md
services/rag/: README.md  pyproject.toml
services/rag/app/: config.py  main.py
services/rag/app/embedding/: bge_m3.py
services/rag/app/ingest/: chunker.py  loader.py  ocr.py  pipeline.py
services/rag/app/llm/: base.py  gemini_provider.py  openai_provider.py  vllm_provider.py
services/rag/app/rag/: chain.py
services/rag/app/retrieval/: retriever.py
services/rag/app/vectorstore/: qdrant_store.py
services/rag/scripts/: ingest_cli.py  query_cli.py
