[project]
name = "onprem-rag"
version = "0.1.0"
description = "Minimal on-prem-capable RAG backend (ingest + retrieve + generate)"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # Vector DB
    "qdrant-client>=1.12",
    # Embeddings (BGE-m3)
    "FlagEmbedding>=1.3",
    # Document loading
    "pypdf>=5.1",
    # LLM providers (vLLM reuses the OpenAI-compatible client)
    "openai>=1.55",
    "google-genai>=0.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Scanned-PDF OCR path. Heavy; install only when needed:
#   uv sync --extra ocr
ocr = [
    "paddleocr>=2.9",
    "paddlepaddle>=2.6",
    "pymupdf>=1.24",  # rasterise PDF pages to images before OCR
]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
